Foodi Project design completed

--- a/Day-13/resturarant-website-asset/resturarant-website-asset/index.html
+++ b/Day-13/resturarant-website-asset/resturarant-website-asset/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body class="bg-[#FCFCFC]">
 
     <header>
@@ -29,9 +31,12 @@
     <section>
         <section class="wrapper flex justify-between items-center">
             <div class="w-[42%]">
-                <h1 class="text-[46px] font-extrabold leading-tight">Dive into Delights Of Delectable <span class="text-[#39DB4A]">Food</span></h1>
-                <p class="py-10 font-medium mb-4 text-[18px] text-[#555555]">Where Each Plate Weaves a Story of Culinary Mastery and Passionate Craftsmanship</p>
-                <a href="#" class="text-[16px] text-white font-medium py-4 px-10 bg-[#39DB4A] rounded-full">Order Now</a>
+                <h1 class="text-[46px] font-extrabold leading-tight">Dive into Delights Of Delectable <span
+                        class="text-[#39DB4A]">Food</span></h1>
+                <p class="py-10 font-medium mb-4 text-[18px] text-[#555555]">Where Each Plate Weaves a Story of Culinary
+                    Mastery and Passionate Craftsmanship</p>
+                <a href="#" class="text-[16px] text-white font-medium py-4 px-10 bg-[#39DB4A] rounded-full">Order
+                    Now</a>
             </div>
             <div class="w-[55%] p-10">
                 <img src="images/home-right.png" alt="Image" class="w-full ml-4">
@@ -41,54 +46,60 @@
 
     <section>
         <section class="wrapper text-center">
-            <h3 class="text-[14px] text-[#FF6868] font-semibold mb-5">CUSTOMER FAVORITES</h3>
+            <h3 class="text-[14px] text-[#FF6868] font-semibold mb-4 tracking-widest">CUSTOMER FAVORITES</h3>
             <h1 class="text-[42px] font-extrabold ">Popular Catagories</h1>
-            <div class="flex  justify-around items-center py-20">
+            <div class="flex  justify-around items-center py-14 pb-32">
                 <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md">
-                    <div class="rounded- bg-[#C1F1C6] p-4 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img src="images/category1.png" alt="image" class="w-[full]"></div>
+                    <div class="rounded- bg-[#C1F1C6] p-4 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img
+                            src="images/category1.png" alt="image" class="w-[full]"></div>
                     <h2 class="text-[20px] font-semibold">Main Dish</h2>
                     <span class="text-[#555555] font-medium">(86 dishes)</span>
                 </div>
-                <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md" >
-                    <div class="rounded- bg-[#C1F1C6] p-4 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img src="images/category2.png" alt="image" class="w-[full]"></div>
+                <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md">
+                    <div class="rounded- bg-[#C1F1C6] p-4 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img
+                            src="images/category2.png" alt="image" class="w-[full]"></div>
                     <h2 class="text-[20px] font-semibold">Break Fast</h2>
                     <span class="text-[#555555] font-medium">(12 break fast)</span>
                 </div>
-                <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md" >
-                    <div class="rounded- bg-[#C1F1C6] p-4 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img src="images/category3.png" alt="image" class="w-[full]"></div>
+                <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md">
+                    <div class="rounded- bg-[#C1F1C6] p-4 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img
+                            src="images/category3.png" alt="image" class="w-[full]"></div>
                     <h2 class="text-[20px] font-semibold">Dessert</h2>
                     <span class="text-[#555555] font-medium">(48 dessert)</span>
                 </div>
-                <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md" >
-                    <div class="rounded- bg-[#C1F1C6] p-5 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img src="images/category14.png" alt="image" class="w-[full]"></div>
+                <div class="p-8 rounded-3xl w-[230px] h-[230px] bg-[white] items-center m-auto flex flex-col shadow-md">
+                    <div class="rounded- bg-[#C1F1C6] p-5 rounded-full w-[100px] h-[100px] items-center flex mb-3"><img
+                            src="images/category14.png" alt="image" class="w-[full]"></div>
                     <h2 class="text-[20px] font-semibold">Browse All</h2>
                     <span class="text-[#555555] font-medium">(255 Items)</span>>
                 </div>
             </div>
-            
         </section>
     </section>
 
     <section>
         <section class="wrapper text-start">
-            <h3 class="text-[18px] text-[#FF6868] font-semibold mb-4">SPECIAL DISHES</h3>
+            <h3 class="text-[14px] text-[#FF6868] font-semibold mb-4 tracking-widest">SPECIAL DISHES</h3>
             <h1 class="text-[42px] font-extrabold ">Standout Dishes <br> From Our Menu</h1>
             <div class="flex  justify-around items-center py-10">
-                <div class="p-6 px-8 rounded-3xl w-[320px] h-[320px] bg-[white] items-center m-auto flex flex-col shadow-md">
+                <div
+                    class="p-6 px-8 rounded-3xl w-[320px] h-[320px] bg-[white] items-center m-auto flex flex-col shadow-md">
                     <img src="images/fattoush-salad.png" alt="image" class="w-[80%]">
                     <div class="text-start w-full mt-4">
                         <h2 class="text-[20px] font-semibold text-start">Fattoush salad</h2>
                         <span class="text-[#555555] font-medium"> Dscription of the item</span>
                     </div>
                 </div>
-                <div class="p-6 px-8 rounded-3xl w-[320px] h-[320px] bg-[white] items-center m-auto flex flex-col shadow-md">
+                <div
+                    class="p-6 px-8 rounded-3xl w-[320px] h-[320px] bg-[white] items-center m-auto flex flex-col shadow-md">
                     <img src="images/vegetable-salad.png" alt="image" class="w-[80%]">
                     <div class="text-start w-full mt-4">
                         <h2 class="text-[20px] font-semibold text-start">Vegetable salad</h2>
                         <span class="text-[#555555] font-medium"> Dscription of the item</span>
                     </div>
                 </div>
-                <div class="p-6 px-8 rounded-3xl w-[320px] h-[320px] bg-[white] items-center m-auto flex flex-col shadow-md">
+                <div
+                    class="p-6 px-8 rounded-3xl w-[320px] h-[320px] bg-[white] items-center m-auto flex flex-col shadow-md">
                     <img src="images/egg-salad.png" alt="image" class="w-[80%]">
                     <div class="text-start w-full mt-4">
                         <h2 class="text-[20px] font-semibold text-start">Egg vegi salad</h2>
@@ -104,54 +115,58 @@
             <img src="images/footer-left.png" alt="img" class="w-full p-20">
         </div>
         <div class="w-[50%] pr-20">
-            <h3 class="text-[18px] text-[#FF6868] font-semibold mb-10">TESTIMONIALS</h3>
+            <h3 class="text-[14px] text-[#FF6868] font-semibold mb-8 tracking-widest">TESTIMONIALS</h3>
             <h1 class="text-[40px] font-black leading-tight my-5">What Our Customers Say About Us</h1>
-            <p class="font-medium text-[18px] text-[#555555]">"I had the pleasure of dining at Foodi last night, and I'm still raving about the experience! The attention to detail in presentation and service was impeccable"</p>
+            <p class="font-medium text-[18px] text-[#555555]">"I had the pleasure of dining at Foodi last night, and I'm
+                still raving about the experience! The attention to detail in presentation and service was impeccable"
+            </p>
         </div>
     </section>
 
     <footer class="p-10">
         <section class="wrapper flex ">
-            <div class="w-[40%]">
-                <img src="images/logo.png" alt="footer-log" class="w-[110px]">
-                <p class="font-medium text-[18px] text-[#555555] w-60 mt-5">Savor the artistry where every dish is a culinary masterpiece.</p>
+            <div class="w-[30%]">
+                <img src="images/logo.png" alt="footer-log" class="w-[90px]">
+                <p class="font-medium text-[18px] text-[#555555] w-60 mt-5">Savor the artistry where every dish is a
+                    culinary masterpiece.</p>
             </div>
-            <div class="w-[60%] m-auto flex justify-center">
+            <div class="w-[70%] m-auto flex justify-center text-[18px]">
                 <table>
                     <thead>
                         <tr>
-                            <th class="px-12 py-2 text-left">Useful&nbsp;links</th>
-                            <th class="px-12 py-2 text-left">Main&nbsp;Menu</th>
-                            <th class="px-12 py-2 text-left">Contact&nbsp;Us</th>
+                            <th class="px-16 py-3 text-left">Useful&nbsp;links</th>
+                            <th class="px-16 py-3 text-left">Main&nbsp;Menu</th>
+                            <th class="px-16 py-3 text-left">Contact&nbsp;Us</th>
                         </tr>
                     </thead>
                     <tbody class="font-semibold text-gray-500 text-[14px]">
                         <tr>
-                            <td class="px-12 py-2">About us</td>
-                            <td class="px-12 py-2">Home</td>
-                            <td class="px-12 py-2">Example@email.com</td>
+                            <td class="px-16 py-3">About us</td>
+                            <td class="px-16 py-3">Home</td>
+                            <td class="px-16 py-3">Example@email.com</td>
                         </tr>
                         <tr>
-                            <td class="px-12 py-2">Events</td>
-                            <td class="px-12 py-2">Offers</td>
-                            <td class="px-12 py-2">+64 958 248 966</td>
+                            <td class="px-16 py-3">Events</td>
+                            <td class="px-16 py-3">Offers</td>
+                            <td class="px-16 py-3">+64 958 248 966</td>
                         </tr>
                         <tr>
-                            <td class="px-12 py-2">Blogs</td>
-                            <td class="px-12 py-2">Menus</td>
-                            <td class="px-12 py-2 ">Social media</td>
+                            <td class="px-16 py-3">Blogs</td>
+                            <td class="px-16 py-3">Menus</td>
+                            <td class="px-16 py-3 ">Social media</td>
                         </tr>
                         <tr>
-                            <td class="px-12 py-2">FAQ</td>
-                            <td class="px-12 py-2">Reservation</td>
-                            <td class="px-12 py-2"></td>
+                            <td class="px-16 py-3">FAQ</td>
+                            <td class="px-16 py-3">Reservation</td>
+                            <td class="px-16 py-3"></td>
                         </tr>
-                        
+
                     </tbody>
                 </table>
             </div>
         </section>
-   </footer>
+    </footer>
 
 </body>
+
 </html>
