--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -19,11 +19,11 @@
                     <img src="images/logo.png" alt="log" class="w-[100px]">
                 </h1>
                 <ul class="hidden justify-center items-center md:flex">
-                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99]">Home</a></li>
-                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99]">Brands</a></li>
-                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99]">Recent Products</a></li>
-                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99]">Contact</a></li>
-                    <li class=""><a href="#" class="text-[14px] font-normal text-[#8B8E99]">About</a></li>
+                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99] hover:text-white">Home</a></li>
+                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99] hover:text-white">Brands</a></li>
+                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99] hover:text-white">Recent Products</a></li>
+                    <li class="mr-7"><a href="#" class="text-[14px] font-normal text-[#8B8E99] hover:text-white">Contact</a></li>
+                    <li class=""><a href="#" class="text-[14px] font-normal text-[#8B8E99] hover:text-white">About</a></li>
                 </ul>
                
                 <ul class="flex justify-end items-center">
@@ -39,7 +39,7 @@
                     <form action="">
                         <div class="py-1 px-1 md:py-2 md:px-2 bg-white rounded-xl flex justify-between text-[14px]" >
                             <input type="text" placeholder="Find the best Brands" class="outline-none text-center ">
-                            <button type="submit" class="py-2 px-2 md:px-4  bg-[#3858D6] rounded-xl">Search</button>
+                            <button type="submit" class="py-2 px-2 md:px-4 font-semibold  bg-[#3858D6] rounded-xl hover:bg-[#3875d6]">Search</button>
                         </div>
                     </form>
                 </div>
@@ -52,7 +52,7 @@
 
     <section class="py-10">
         <section class="wrapper grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-            <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5 sm:mr-5 col-span-1 lg:col-span-1">
+            <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5 sm:mr-5 col-span-1 lg:col-span-1 transform hover:scale-105 transition duration-1000 ease-in-out">
                 <div class="flex justify-between">
                     <div class="w-[30%]">
                         <img src="images/apple.png" alt="watch" class="w-full">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5  lg:mr-5 col-span-1">
+            <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5  lg:mr-5 col-span-1 transform hover:scale-105 transition duration-1000 ease-in-out">
                 <div class="flex justify-between">
                     <div class="w-[30%]">
                         <img src="images/xiaomi.png" alt="watch" class="w-full">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5 col-span-1 sm:col-span-2 lg:col-span-1 lg:mr-5 sm:w-[60%] lg:w-full m-auto">
+            <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5 col-span-1 sm:col-span-2 lg:col-span-1 lg:mr-5 sm:w-[60%] lg:w-full m-auto transform hover:scale-105 transition duration-1000 ease-in-out">
                 <div class="flex justify-between">
                     <div class="w-[30%]">
                         <img src="images/fitbit.png" alt="watch" class="w-full">
@@ -87,6 +87,7 @@
             </div>
         </section>
     </section>
+
 
 </body>
 </html>
