Product section completed with responsive

--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -88,6 +88,112 @@
         </section>
     </section>
 
+    <section class="py-10">
+        <section class="wrapper">
+            <div class="text-center mb-10">
+                <span class="text-[14px] text-[#3858D6] font-semibold">Find your favourite smart watch.</span>
+                <h2 class="text-[32px] font-bold sm:mt-[-3px] leading-tight sm:text-[36px]">Our Latest Products</h2>    
+            </div>
+
+            <div class="grid min-[321px]:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-8 mb-10">
+
+                <div class="py-5  flex flex-col justify-center items-center ">
+                    <img src="images/ultra 1.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Ultra I</h3>
+                    <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                    <div class="flex justify-between gap-1 items-center">
+                        <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$899.00</span>
+                         <span class="text-[14px] md:text-[16px] font-bold">$699.00</span>
+                    </div>                    
+                </div>
+    
+                <div class=" py-5 flex flex-col justify-center items-center ">
+                    <img src="images/ultra 2.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Ultra II</h3>
+                    <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                    <div class="flex justify-between gap-1 items-center">
+                        <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$999.00</span>
+                         <span class="text-[14px] md:text-[16px] font-bold">$799.00</span>
+                    </div>                    
+                </div>
+
+                <div class=" flex flex-col justify-center items-center ">
+                    <img src="images/product1.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart I</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                        </div>                    
+                </div>
+
+                <div class=" flex flex-col justify-center items-center ">
+                    <img src="images/product2.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart II</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                        </div>                    
+                </div>
+
+                <div class=" py-5 flex flex-col justify-center items-center ">
+                    <img src="images/xiaomi watch 2.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Xiaomi watch 2</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$499.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$399.00</span>
+                        </div>                    
+                </div>
+
+                <div class=" flex flex-col justify-center items-center ">
+                    <img src="images/product3.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart III</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                        </div>                    
+                </div>
+
+                <div class=" py-5 flex flex-col justify-center items-center ">
+                    <img src="images/product4.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart IV</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                        </div>                    
+                </div>
+
+                <div class=" py-5 flex flex-col justify-center items-center ">
+                    <img src="images/product5.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Samsung Watch Pro</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                        </div>                    
+                </div>
+
+                <div class=" py-5 flex flex-col justify-center items-center min-[321px]:hidden md:flex lg:hidden">
+                    <img src="images/product6.png" alt="image">
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Fitbit Max 1</h3>
+                        <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
+                        <div class="flex justify-between gap-1 items-center">
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                        </div>                    
+                </div>
+
+            </div>
+            
+            <div class="flex justify-center">
+                <a href="#" class="px-8 py-2  bg-[#3858D6] text-white text-center rounded-xl font-bold">View More</a>
+            </div>
+        </section>
+    </section>
 
 </body>
 </html>
