People section head completed

--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -92,7 +92,7 @@
         <section class="wrapper">
             <div class="text-center mb-10">
                 <span class="text-[14px] text-[#3858D6] font-semibold">Find your favourite smart watch.</span>
-                <h2 class="text-[32px] font-bold sm:mt-[-3px] leading-tight sm:text-[36px]">Our Latest Products</h2>    
+                <h2 class="text-[32px] font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">Our Latest Products</h2>    
             </div>
 
             <div class="grid min-[321px]:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-8 mb-10">
@@ -192,6 +192,16 @@
             <div class="flex justify-center">
                 <a href="#" class="px-8 py-2  bg-[#3858D6] text-white text-center rounded-xl font-bold">View More</a>
             </div>
+        </section>
+    </section>
+
+    <section>
+        <section class="wrapper">
+            <div class="text-center mb-10">
+                <span class="text-[14px] text-[#3858D6] font-semibold">Here are our some of the best clients.</span>
+                <h2 class="text-[32px] font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">What People Say About Us</h2>    
+            </div>
+
         </section>
     </section>
 
