--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -202,21 +202,21 @@
                 <h2 class="text-[32px] font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">What People Say About Us</h2>    
             </div>
 
-            <div class="flex flex-col gap-5">
-                <div class="flex p-3 justify-center items-center bg-[#F6F6F6] rounded-xl gap-3">
-                    <img src="images/people1.png" alt="image" class="w-[40%]">
-                    <div>
+            <div class="flex  flex-col gap-5 sm:gap-8 sm:flex-row">
+                <div class="flex p-3 min-[376px]:p-5 md:p-8 justify-center items-center bg-[#F6F6F6] rounded-2xl gap-3">
+                    <img src="images/people1.png" alt="image" class="w-[40%] ">
+                    <div class="w-[60%]">
                         <h4 class="text-[18px] font-bold pb-1">Hamza Faizi</h4>
-                        <p class="text-[12px] pb-3 text-[#8B8E99] font-semibold">Don't waste time, just order! just order! This is the best website to purchase smart watches.</p>
+                        <p class="text-[12px] pb-3 text-[#8B8E99] font-medium">Don't waste time, just order! just order! This is the best website to purchase smart watches.</p>
                         <img src="images/star.png" alt="*****" class="w-[50%]">
                     </div>
                 </div>
 
-                <div class="flex p-3 justify-center items-center bg-[#F6F6F6] rounded-xl gap-3">
-                    <img src="images/people2.png" alt="image" class="w-[40%] h-[40%]">
-                    <div class="flex flex-col justify-center">
+                <div class="flex p-3 min-[376px]:p-5 md:p-8 justify-center items-center bg-[#F6F6F6] rounded-2xl gap-3">
+                    <img src="images/people2.png" alt="image" class="w-[40%] ">
+                    <div class="w-[60%]">
                         <h4 class="text-[18px] font-bold pb-1">Hafiz Huzaifa</h4>
-                        <p class="text-[12px] pb-3 text-[#8B8E99] font-semibold">i've been purchasing smart watches of Mohid for a long time.. All the products are good quality</p>
+                        <p class="text-[12px] pb-3 text-[#8B8E99] font-medium">i've been purchasing smart watches of Mohid for a long time. All the products are good quality</p>
                         <img src="images/star.png" alt="*****" class="w-[50%]">
                     </div>
                 </div>
