--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -221,9 +221,29 @@
                     </div>
                 </div>
             </div>
-
         </section>
     </section>
 
+    <section class="my-20">
+        <section class="wrapper bg-[#F6F6F6] py-10 rounded-3xl">
+            <div class="flex flex-col-reverse sm:flex-row p-2 ">
+                <div class="w-[100%] sm:w-[55%] flex flex-col justify-center items-center text-center m-auto" >
+                    <h2  class="text-[32px] md:text-[36px] lg:text-[40px]  font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">Subscribe To Newsletter</h2>
+                    <span class="text-[16px] pb-3 text-[#8B8E99] font-medium my-2">Get free guide about smart watches daily.</span>
+                    <div class="w-[90%] sm:w-[80%] py-1 px-1 md:py-2 md:px-2 bg-white rounded-xl flex justify-between text-[12px]" >
+                        <input type="email" placeholder="Enter Email Address" class="outline-none text-center w-[120px]">
+                        <button type="submit" class="py-2 px-2 md:px-4 font-semibold  bg-[#3858D6] rounded-xl hover:bg-[#3875d6] text-white">Subscribe</button>
+                    </div>
+                </div>
+                <div class="w-100% sm:w-[45%] m-auto mb-10 flex justify-center items-center">
+                    <img src="images/footer-image.png" alt="image" class="w-[50%] ">
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <footer class="p-5 bg-black text-white text-center">
+        <span class="text-[13px]">Copyright @ 2022 | Mohid</span>
+    </footer>
 </body>
 </html>
