design completed with responive

--- a/Day-15/watch-website-asset/watch-website-asset/index.html
+++ b/Day-15/watch-website-asset/watch-website-asset/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <section class="bg-black text-white">
+    <section class="bg-black text-white pb-8 ">
         <section class="wrapper">
             <header class="h-[100px] flex justify-between items-center">
                 <h1>
@@ -32,25 +32,25 @@
                     <li class="mr-3"><a href="#"><img src="images/cart.png" alt="icon" class="w-[24px]"></a></li>
                 </ul>
             </header>
-            <section class="py-4 flex flex-col  justify-between items-center sm:flex-row ">
-                <div class="w-[100%] sm:w-[45%] text-center sm:text-start ">
-                    <h1 class="text-[38px] sm:text-[38px] md:text-[42px] lg:text-[56px] xl:text-[76px]  leading-tight md:leading-normal font-bold sm:font-extrabold mb-2">Discover <br> Most Suitable <br> Watches</h1>
-                    <p class=" text-[12px] md:text-[14px] lg:text-[16px] xl:text-[18px] font-normal text-[#8B8E99] mb-10">Find the best.reliable, and cheap smart watches here. we focus on product quality. Here you can find smart watches of almost all brands. sSo why you are waiting? Just order now!</p>
+            <section class="py-4 sm:py-10 flex flex-col justify-end items-center sm:flex-row ">
+                <div class="w-[100%] sm:w-[45%] text-center sm:text-start bg-black ">
+                    <h1 class="text-[38px] sm:text-[38px] md:text-[42px] lg:text-[60px] xl:text-[76px]  leading-tight font-bold sm:font-extrabold mb-2">Discover <br> Most Suitable <br> Watches</h1>
+                    <p class=" text-[12px] md:text-[14px] lg:text-[16px] xl:text-[18px] font-normal text-[#8B8E99] my-5 mb-10">Find the best.reliable, and cheap smart watches here. we focus on product quality. Here you can find smart watches of almost all brands. So why you are waiting? Just order now!</p>
                     <form action="">
                         <div class="py-1 px-1 md:py-2 md:px-2 bg-white rounded-xl flex justify-between text-[14px]" >
                             <input type="text" placeholder="Find the best Brands" class="outline-none text-center ">
-                            <button type="submit" class="py-2 px-2 md:px-4 font-semibold  bg-[#3858D6] rounded-xl hover:bg-[#3875d6]">Search</button>
+                            <button type="submit" class="py-2 px-2 md:px-6 font-semibold  bg-[#3858D6] rounded-lg hover:bg-[#3875d6]">Search</button>
                         </div>
                     </form>
                 </div>
-                <div class="w-[100%] sm:w-[45%] flex mt-10  justify-center sm:justify-end m-auto">
-                    <img src="images/home-right.png" alt="image" class="w-[60%] sm:w-[80%]">
+                <div class="w-[100%] sm:w-[55%] flex mt-10 sm:mt-0  justify-center sm:justify-end  m-auto">
+                    <img src="images/home-right.png" alt="image" class="w-[80%] sm:w-[70%]">
                 </div>
             </section>
         </section>
     </section>
 
-    <section class="py-10">
+    <section class="pt-10 sm:py-20">
         <section class="wrapper grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
             <div class="flex p-5 py-8 rounded-3xl bg-[#F6F6F6] mb-5 sm:mr-5 col-span-1 lg:col-span-1 transform hover:scale-105 transition duration-1000 ease-in-out">
                 <div class="flex justify-between">
@@ -88,17 +88,17 @@
         </section>
     </section>
 
-    <section class="py-10">
+    <section class="py-10 sm:mb-14">
         <section class="wrapper">
             <div class="text-center mb-10">
-                <span class="text-[14px] text-[#3858D6] font-semibold">Find your favourite smart watch.</span>
-                <h2 class="text-[32px] font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">Our Latest Products</h2>    
+                <span class="text-[12px] sm:text-[15px] text-[#3858D6] font-semibold">Find your favourite smart watch.</span>
+                <h2 class="text-[26px] sm:text-[32px] font-bold sm:mt-[-5px] leading-tight">Our Latest Products</h2>    
             </div>
 
             <div class="grid min-[321px]:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-8 mb-10">
 
                 <div class="py-5  flex flex-col justify-center items-center ">
-                    <img src="images/ultra 1.png" alt="image">
+                    <img src="images/ultra 1.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out">
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Ultra I</h3>
                     <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                     <div class="flex justify-between gap-1 items-center">
@@ -108,7 +108,7 @@
                 </div>
     
                 <div class=" py-5 flex flex-col justify-center items-center ">
-                    <img src="images/ultra 2.png" alt="image">
+                    <img src="images/ultra 2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Ultra II</h3>
                     <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                     <div class="flex justify-between gap-1 items-center">
@@ -118,27 +118,27 @@
                 </div>
 
                 <div class=" flex flex-col justify-center items-center ">
-                    <img src="images/product1.png" alt="image">
+                    <img src="images/product1.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart I</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
                             <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
-                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                            <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
                         </div>                    
                 </div>
 
                 <div class=" flex flex-col justify-center items-center ">
-                    <img src="images/product2.png" alt="image">
+                    <img src="images/product2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart II</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
                             <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
-                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                            <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
                         </div>                    
                 </div>
 
                 <div class=" py-5 flex flex-col justify-center items-center ">
-                    <img src="images/xiaomi watch 2.png" alt="image">
+                    <img src="images/xiaomi watch 2.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Xiaomi watch 2</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class=" flex flex-col justify-center items-center ">
-                    <img src="images/product3.png" alt="image">
+                    <img src="images/product3.png" alt="image" class="transform hover:scale-105 transition duration-1000 ease-in-out>
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart III</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
@@ -158,22 +158,22 @@
                 </div>
 
                 <div class=" py-5 flex flex-col justify-center items-center ">
-                    <img src="images/product4.png" alt="image">
+                    <img src="images/product4.png" alt="image" >
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Apple Smart IV</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
-                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
-                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$450.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$399.00</span>
                         </div>                    
                 </div>
 
                 <div class=" py-5 flex flex-col justify-center items-center ">
                     <img src="images/product5.png" alt="image">
-                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Samsung Watch Pro</h3>
+                    <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Samsung Watch</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
-                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
-                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$299.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$300.00</span>
                         </div>                    
                 </div>
 
@@ -182,24 +182,24 @@
                     <h3 class="text-[18px] font-bold mt-5 sm:text-[22px] md:text-[24px]">Fitbit Max 1</h3>
                         <img src="images/star.png" alt="star" class="w-[40%] m-2 max-w-[100px]">
                         <div class="flex justify-between gap-1 items-center">
-                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$300.00</span>
-                             <span class="text-[14px] md:text-[16px] font-bold">$255.00</span>
+                            <span class="text-[12px] md:text-[14px] text-[#8B8E99] line-through">$155.00</span>
+                             <span class="text-[14px] md:text-[16px] font-bold">$199.00</span>
                         </div>                    
                 </div>
 
             </div>
             
             <div class="flex justify-center">
-                <a href="#" class="px-8 py-2  bg-[#3858D6] text-white text-center rounded-xl font-bold">View More</a>
+                <a href="#" class=" px-6 py-2 sm:px-12 sm:py-3  bg-[#3858D6] text-white text-center rounded-2xl font-bold">View More</a>
             </div>
         </section>
     </section>
 
     <section class="py-10">
         <section class="wrapper">
-            <div class="text-center mb-10">
-                <span class="text-[14px] text-[#3858D6] font-semibold">Here are our some of the best clients.</span>
-                <h2 class="text-[32px] font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">What People Say About Us</h2>    
+            <div class="text-center mb-12">
+                <span class="text-[12px] sm:text-[15px] text-[#3858D6] font-semibold">Here are our some of the best clients.</span>
+                <h2 class="text-[26px] sm:text-[32px] font-bold sm:mt-[-5px] leading-tight ">What People Say About Us</h2>    
             </div>
 
             <div class="flex  flex-col gap-5 sm:gap-8 sm:flex-row">
@@ -224,12 +224,12 @@
         </section>
     </section>
 
-    <section class="my-20">
+    <section class="mb-10 min-[321px]:mb-20 min-[321px]:mt-28 ">
         <section class="wrapper bg-[#F6F6F6] py-10 rounded-3xl">
             <div class="flex flex-col-reverse sm:flex-row p-2 ">
                 <div class="w-[100%] sm:w-[55%] flex flex-col justify-center items-center text-center m-auto" >
-                    <h2  class="text-[32px] md:text-[36px] lg:text-[40px]  font-bold sm:mt-[-5px] leading-tight sm:text-[36px]">Subscribe To Newsletter</h2>
-                    <span class="text-[16px] pb-3 text-[#8B8E99] font-medium my-2">Get free guide about smart watches daily.</span>
+                    <h2  class="text-[26px] sm:text-[32px] md:text-[36px] lg:text-[40px]  font-bold sm:mt-[-5px] leading-tight">Subscribe To Newsletter</h2>
+                    <span class="text-[12px] sm:text-[16px] pb-3 text-[#8B8E99] font-medium my-2 lg:my-8">Get free guide about smart watches daily.</span>
                     <div class="w-[90%] sm:w-[80%] py-1 px-1 md:py-2 md:px-2 bg-white rounded-xl flex justify-between text-[12px]" >
                         <input type="email" placeholder="Enter Email Address" class="outline-none text-center w-[120px]">
                         <button type="submit" class="py-2 px-2 md:px-4 font-semibold  bg-[#3858D6] rounded-xl hover:bg-[#3875d6] text-white">Subscribe</button>
